# TareaExtraclase-4-Datos-ll

./: CMakeLists.txt  MD5.cpp  README.md  SHA1Main.cpp
MD5/: MD5Receiver.cpp  MD5Receiver.h  MD5Transmitter.cpp  MD5Transmitter.h
SHA1/: SHA1.cpp  SHA1.h  SHA1Receiver.cpp  SHA1Receiver.h  SHA1Transmitter.cpp  SHA1Transmitter.h
